--- a/charts/javascript/templates/clusterrole.yaml
+++ b/charts/javascript/templates/clusterrole.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: Role
+kind: ClusterRole
 metadata:
   labels:
     app: {{ template "fullname" . }}
@@ -7,15 +7,15 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "fullname" . }}
-  namespace: {{ .Release.Namespace }}
 rules:
   # Allow Dashboard to create 'kubernetes-dashboard-key-holder' secret.
 - apiGroups:
     - ""
-  resources: ["*"]
+    - "apps"
+  resources: ["pods","deployments"]
   verbs:
     - get
     - update
     - list
-    - watch
+    - patch
 
