--- a/charts/javascript/templates/clusterrolebinding.yaml
+++ b/charts/javascript/templates/clusterrolebinding.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   labels:
     app: {{ template "fullname" . }}
@@ -7,10 +7,9 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "fullname" . }}
-  namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: {{ template "fullname" . }}
 subjects:
   - kind: ServiceAccount
