change env debug value, remove the ? form the request url,

--- a/charts/javascript/templates/deployment.yaml
+++ b/charts/javascript/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
-        - name: DEBUG
+        - name: POD_SCALER_DEBUG
           value: "TRUE"
         ports:
         - containerPort: {{ .Values.service.internalPort }}
