--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Applicaster Ltd",
   "license": "MIT",
   "dependencies": {
+    "access-log": "^0.4.1",
     "express": "^4.16.3",
     "k8s": "^0.4.15",
     "kubernetes-client": "^5.3.1",
